@@ -18,7 +18,8 @@ dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h pty.h syslog.h unistd.h)
+AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h pty.h syslog.h unistd.h \
+	linux/if_tun.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
